--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-icons": "^1.11.3",
     "font-awesome": "^4.7.0",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.2.0",
